--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,5 +21,6 @@ android {
 
 dependencies {
 	compile fileTree(dir: 'libs', include: ['*.jar'])
+	compile project(':foxyserver')
 	compile 'com.android.support:appcompat-v7:22.1.1'
 }
